# robo_nd_project5

./: .gitignore  README.md
scripts/: home_service.sh  launch.sh  test_markers.sh  test_pick.sh  test_slam.sh
src/myrobot_control/: CMakeLists.txt  package.xml
src/myrobot_control/config/: control_params.yaml  joystick_params.yaml
src/myrobot_control/launch/: control.launch
src/myrobot_description/: package.xml
src/myrobot_description/launch/: robot_description.launch
src/myrobot_description/urdf/: myrobot.gazebo.xacro  myrobot.urdf.xacro  myrobot_wheel.urdf.xacro
src/myrobot_gazebo/: package.xml
src/myrobot_gazebo/launch/: spawn_myrobot.launch  world.launch
src/myrobot_gazebo/models/building_downstairs/: model.config  model.sdf
src/myrobot_gazebo/models/maze/: model.sdf
src/myrobot_gazebo/models/my_ball/: model.sdf
src/myrobot_gazebo/models/simple_apartment/: model.config  model.sdf
src/myrobot_gazebo/models/whirly_obstacle/: model.config  model.sdf
src/myrobot_gazebo/worlds/: home.world  simple_apartment.world
src/myrobot_main/: CMakeLists.txt  package.xml
src/myrobot_main/launch/: main.launch
src/myrobot_main/rviz/: nav_config.rviz  teleop_config.rviz
src/myrobot_markers/: CMakeLists.txt  package.xml
src/myrobot_markers/launch/: markers.launch
src/myrobot_markers/rough/: a.out  test  test.cpp
src/myrobot_markers/src/: add_markers.cpp  add_markers_quiz.cpp  basic_shapes.cpp
src/myrobot_navigation/: CMakeLists.txt  package.xml
src/myrobot_navigation/config/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  gmapping_params.yaml  local_costmap_params.yaml
src/myrobot_navigation/launch/: mapping.launch  mapping_rtab.launch  navigation.launch
src/myrobot_pick/: CMakeLists.txt  package.xml
src/myrobot_pick/launch/: pick.launch
src/myrobot_pick/src/: pick_goal.cpp  pick_objects.cpp  simple_navigation_goals.cpp
src/myrobot_pick/srv/: DriveToGoal.srv
