<?xml version="1.0"?>
<package format="2">
  <name>myrobot_gazebo</name>
  <version>0.0.0</version>
  <description>Robot for the Go Chase It! project</description>

  <author email="">Will Hunt</author>
  <maintainer email="">will</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
