<?xml version="1.0"?>
<package format="2">
  <name>myrobot_gazebo</name>
  <version>0.0.0</version>
  <description>Robot for the Go Chase It! project</description>

  <author email="willhunt@noemail.com">Will Hunt</author>
  <maintainer email="willhunt@noemail.com">will</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
