<?xml version="1.0"?>
<package format="2">
  <name>myrobot_main</name>
  <version>0.0.0</version>
  <description>The myrobot_main package</description>

  <author email="willhunt@noemail.com">Will Hunt</author>
  <maintainer email="willhunt@noemail.com">will</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>rviz</exec_depend>

  <exec_depend>myrobot_description</exec_depend>
  <exec_depend>myrobot_navigation</exec_depend>
  <exec_depend>myrobot_gazebo</exec_depend>
  <exec_depend>myrobot_control</exec_depend>  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>