<?xml version="1.0"?>
<package format="2">
  <name>myrobot_navigation</name>
  <version>0.0.0</version>
  <description>The myrobot_navigation package</description>

  <author email="">Will Hunt</author>
  <maintainer email="">will</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>
  <run_depend>teleop_twist_joy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
