<?xml version="1.0"?>
<package format="2">
  <name>myrobot_navigation</name>
  <version>0.0.0</version>
  <description>The myrobot_navigation package</description>

  <author email="willhunt@noemail.com">Will Hunt</author>
  <maintainer email="willhunt@noemail.com">will</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>navfn</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
